--- a/footer.html
+++ b/footer.html
@@ -1,54 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title> FOOTER | E-COMMERCE WEBSITE BY EDYODA </title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Footer | E-Commerce Website by Edyoda</title>
     <!-- EXTERNAL LINKS -->
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/footer.css">
-</head>
+    <link
+      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/footer.css" />
+  </head>
 
-<body>
+  <body>
     <footer>
-        <section>    
-            <div id="containerFooter">
-                
-                <div id="webFooter">
-                    <h3> online store </h3>
-                    <p> men clothing </p>
-                    <p> women clothing </p>
-                    <p> men accessories </p>
-                    <p> women accessories </p>
-                </div>
-                <div id="webFooter">
-                    <h3> helpful link </h3>
-                    <p> home </p>
-                    <p> about </p>
-                    <p> contact </p>
-                </div>
-                <div id="webFooter">
-                    <h3> partners </h3>
-                    <p> zara </p>
-                    <p> pantaloons </p>
-                    <p> levis </p>
-                    <p> ucb </p>
-                    <p> + many more </p>
-                </div>
-                <div id="webFooter">
-                    <h3> address </h3>
-                    <p> building 101 </p>
-                    <p> central avenue </p>
-                    <p> la - 902722 </p>
-                    <p> united states </p>
-                </div>
-            </div>
-            <div id="credit"><a href="https://linkedin.com/in/priyanka-sharma-b79401142"> © Priyanka Sharma </a> &nbsp&nbsp&nbsp | &nbsp&nbsp&nbsp <a href="https://www.edyoda.com/" target="_blank"> EDYODA </a></div>
-        </section>
-
+      <section>
+        <div id="containerFooter">
+          <div class="webFooter">
+            <h3>Online Store</h3>
+            <p>Men's Clothing</p>
+            <p>Women's Clothing</p>
+            <p>Men's Accessories</p>
+            <p>Women's Accessories</p>
+          </div>
+          <div class="webFooter">
+            <h3>Helpful Links</h3>
+            <p><a href="#home">Home</a></p>
+            <p><a href="#about">About</a></p>
+            <p><a href="#contact">Contact</a></p>
+          </div>
+          <div class="webFooter">
+            <h3>Partners</h3>
+            <p>Zara</p>
+            <p>Pantaloons</p>
+            <p>Levi's</p>
+            <p>UCB</p>
+            <p>+ Many More</p>
+          </div>
+          <div class="webFooter">
+            <h3>Address</h3>
+            <p>Building 101</p>
+            <p>Central Avenue</p>
+            <p>LA - 902722</p>
+            <p>United States</p>
+          </div>
+        </div>
+        <div id="credit">
+          <a
+            href="https://linkedin.com/in/priyanka-sharma-b79401142"
+            target="_blank"
+            >© Ankit Gupta</a
+          >
+          &nbsp;|&nbsp;
+          <a href="https://www.edyoda.com/" target="_blank">ShopLan</a>
+        </div>
+      </section>
     </footer>
-
-</body>
+  </body>
 </html>
